--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="#">
-<title>Beauttio - HTML Template by WowThemes.net</title>
+<title>Catwalk 21 Salon and Spa</title>
+
+<!-- Icon link -->
+<link rel = "icon" href = "img/catwalk21_cat_logo_black.svg" type = "image/x-icon"> 
+
 <!-- CSS -->
 <link href="css/style.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
 <link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400italic,300italic,300,700,700italic' rel='stylesheet' type='text/css'>
+<link href="css/animation.css" rel="stylesheet">
 
 </head>
 <body class="frontpage">
@@ -22,7 +27,6 @@
 <div class="loader-section section-left"></div>
 <div class="loader-section section-right"></div>
 </div>
-
 
 <div class="menu-outer">
     <div class="menu-icon">
@@ -52,10 +56,14 @@
 	<section class="background">
 	<div class="content-wrapper">
 		<div class="intro">
-			<h1><span class="smaller wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5">1044 Madison Avenue, New York, NY 10075, US</span>
-			<span class="big wow pulse" data-wow-duration="1s" data-wow-delay="0s">Beauttio</span><br/>
-			<span class="small wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s">- HAIR SALON -</span>
+			<h1>
+				<span class="smaller wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5">1044 Madison Avenue, New York, NY 10075, US</span>
+				<span class="big wow pulse" data-wow-duration="1s" data-wow-delay="0s">
+					<img src="img/catwalk21_full_logo_white.svg" ></img>
+				</span><br/>
+				<span class="small wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s">- SALON &amp; SPA -</span>
 			</h1>
+			<canvas  class="fireworks"></canvas>
 		</div>
 	</div>
 	</section>
@@ -189,6 +197,8 @@
 <script src="js/common.js"></script>
 <script src="js/home.js"></script>
 <script src="js/testimonials.js"></script>
+<script src="js/anime.min.js"></script>
+<script src="js/animation.js"></script>
 
 </body>
 </html>
