Complete bootstrap minimal website

--- a/index.html
+++ b/index.html
@@ -1,208 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="#">
-<title>Catwalk 21 Salon and Spa</title>
 
-<!-- Icon link -->
-<link rel = "icon" href = "img/catwalk21_cat_logo_black.svg" type = "image/x-icon"> 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-<!-- CSS -->
-<link href="css/style.css" rel="stylesheet">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="css/font-awesome.min.css">
-<link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400italic,300italic,300,700,700italic' rel='stylesheet' type='text/css'>
-<link href="css/animation.css" rel="stylesheet">
+  <title>Catwalk 21 Salon &amp; Spa</title>
+
+  <!-- Icon link -->
+  <link rel = "icon" href = "img/catwalk21_cat_logo_black.svg" type = "image/x-icon"> 
+
+  <!-- Bootstrap Core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom Fonts -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+
+  <!-- Custom CSS -->
+  <link href="css/stylish-portfolio.css" rel="stylesheet">
+  <link href="css/loader.css" rel="stylesheet">
+  <link href="css/temp.css" rel="stylesheet">
 
 </head>
-<body class="frontpage">
 
-<div id="loader-wrapper">
-<div id="loader"></div>
-<div class="loader-section section-left"></div>
-<div class="loader-section section-right"></div>
-</div>
+<body id="page-top">
 
-<div class="menu-outer">
-    <div class="menu-icon">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
+  <div id="loader-wrapper">
+    <div id="loader"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+  </div>
+
+  <!-- Navigation -->
+  <a class="menu-toggle rounded" href="#">
+    <i class="fas fa-bars"></i>
+  </a>
+  <nav id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger btn btn-primary" href="#page-top">
+          <i class="fa fa-home" aria-hidden="true"></i>
+          Home
+        </a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger btn btn-primary" href="#about">
+          <i class="fa fa-info-circle" aria-hidden="true"></i>
+          About
+        </a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger btn btn-primary" href="#services">
+          <i class="fa fa-book" aria-hidden="true"></i>
+          Services
+        </a>
+      </li>
+      <li class="sidebar-nav-item">
+        <a class="js-scroll-trigger btn btn-primary" href="#contact">
+          <i class="fa fa-phone" aria-hidden="true"></i>
+          Contact
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- Header -->
+  <header class="masthead d-flex">
+    <canvas  class="fireworks"></canvas>
+    <div class="container text-center my-auto" style="z-index: 1;">
+      <hr />
+      <picture>
+        <img src="img/full_logo_white.png" class="img-fluid" width="50%" alt="Catwalk21 main Logo">
+      </picture>
+      <h2 class="mb-5" style="font-family: main_font; color: white;">
+        <em>- SALON & SPA -</em>
+      </h2>
+      <hr />
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
-    <nav>
-        <ul>
-           <li><a href="index.html">Home</a></li>
-           <li><a href="blog.html">Blog</a></li>
-           <li><a target="_blank" href="https://www.wowthemes.net/themes/beauttio/">WP Version</a></li>
-       </ul>
-   </nav>
-</div>
-<a class="menu-close" onClick="return true">
-    <div class="menu-icon">
-        <div class="bar"></div>
-        <div class="bar"></div>
+    <div class="overlay"></div>
+  </header>
+
+  <!-- About -->
+  <section class="content-section bg-light" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col"></div>
+        <div class="col-lg-5 float-right mx-auto text-right" style="color: white;">
+          <h2><em>Catwalk 21 Salon & Spa</em> is the perfect pit stop for you!</h2>
+          <p class="lead mb-5">We at <b><em>Catwalk 21</em></b> aim at becoming the quintessential beauty destination giving
+          premium services of hair care, salon and spa. We boast of modern equipments and facilities along with highly trained
+          employees to give our customers an incredible salon expirience!</p>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+        </div>
+      </div>
     </div>
-</a>
+  </section>
 
-<div class="fixedcallicon">
-	<i class="fa fa-phone"></i><span class="hide">Book Now - 897.645.223</span>
-</div>
-<div class="container">
-	<section class="background">
-	<div class="content-wrapper">
-		<div class="intro">
-			<h1>
-				<span class="smaller wow zoomIn" data-wow-duration="2s" data-wow-delay="0.5">1044 Madison Avenue, New York, NY 10075, US</span>
-				<span class="big" data-wow-duration="1s" data-wow-delay="0s">
-					<img src="img/catwalk21_full_logo_white.svg" ></img>
-				</span><br/>
-				<span class="small wow fadeIn" data-wow-duration="2s" data-wow-delay="0.5s">- SALON &amp; SPA -</span>
-			</h1>
-			<canvas  class="fireworks"></canvas>
-		</div>
-	</div>
-	</section>
-	<section class="background">
-	<div class="content-wrapper">
-		<div class="about">
-			<div class="aboutbadge">
-				<span><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><br/>
-				<span class="border">Awarded Salon</span><br/>
-				Est. 2007</span>
-			</div>
-			<div class="aboutbadge black">
-				<span>Upbeat, chic, and funky salon. We are based on twenty-five years of experience. We specialize in couture cuts and blowouts, men's cuts, natural and funky hair colors, and highlights. </span>
-			</div>
-		</div>
-	</div>
-	</section>
-	<section class="background">
-	<div class="content-wrapper">
-		<div class="voucher">
-			<div class="voucher-whitetransparent">
-				<h2><i class="fa fa-gift"></i><br/>REDEEM YOUR VOUCHER<br/>20% OFF IN 2016<br/><a href="#slide6">Book Now</a></h2>
-			</div>
-		</div>
-	</div>
-	</section>
-	<section class="background">
-	<div class="content-wrapper">
-		<div class="pricingbadge">
-			<h4>High Quality, Low Prices</h4>
-			<ul class="pricing_menu__list">
-				<li class="pricing_menu__row">
-				<div class="pricing_menu__meal">
-					<span>Haircut & Blowdry</span>
-				</div>
-				<span class="pricing_menu__price">$32.00</span>
-				</li>
-				<li class="pricing_menu__row">
-				<div class="pricing_menu__meal">
-					<span>Express Cut</span>
-				</div>
-				<span class="pricing_menu__price">$22.00</span>
-				</li>
-				<li class="pricing_menu__row">
-				<div class="pricing_menu__meal">
-					<span>Shampoo & Set</span>
-				</div>
-				<span class="pricing_menu__price">$19.00</span>
-				</li>
-				<li class="pricing_menu__row">
-				<div class="pricing_menu__meal">
-					<span>Bleach & Tone</span>
-				</div>
-				<span class="pricing_menu__price">$90.00</span>
-				</li>
-				<li class="pricing_menu__row">
-				<div class="pricing_menu__meal">
-					<span>Foil with Haircut</span>
-				</div>
-				<span class="pricing_menu__price">$43.00</span>
-				</li>
-				<a class="fullpricelist" href="#"><i class="fa fa-file-pdf-o"></i> View our full pricing list</a>
-			</ul>
-		</div>
-	</div>
-	</section>
-	<section class="background">
-	<div class="content-wrapper">
-		<div class="testimonialarea">
-			<div class="testimonialarea-bubble">
-				<div class="testimonial-widget">
-					<h3 class="uppercase">BEAUTTIO MADE ME BEAUTIFUL</h3>
-					<div class="testimonial">
-						<p>
-							 "They took care of my wedding, everyone asked me who was my stylist. Great prices, great staff!"
-						</p>
-						<p>
-							<strong>Cindy, New York</strong>
-						</p>
-					</div>
-					<div class="testimonial">
-						<p>
-							 "I am a regular customer of their services, once I pay them a visit I am a different person."
-						</p>
-						<p>
-							<strong>Layana, Munchen</strong>
-						</p>
-					</div>
-					<div class="testimonial">
-						<p>
-							 "Thank you so much, Beauttio, you have one of the best hairstylists aroung, I give it 5 <i class="fa fa-star"></i>."
-						</p>
-						<p>
-							<strong>Jane, London</strong>
-						</p>
-					</div>
-					<button class="prev-testimonial">Prev</button>
-					<button class="next-testimonial">Next</button>
-				</div>
-			</div>
-			<div class="contactform-bubble">
-				<form autocomplete="off" class="contactform" method="post" action="contact.php" id="contactform">
-					<input name="name" type="text" placeholder="Name">
-					<input name="email" type="text" placeholder="E-mail">
-					<textarea name="comment" placeholder="Message" rows="4"></textarea>
-					<input value="SEND" type="submit" id="submit" class="btnsend">
-					<div class="done">
-						<div class="alert-box success">
-							<i>Message sent! We'll answer shortly.</i>
-						</div>
-					</div>
-				</form>
-			</div>
-			<div class="contactaddress-bubble">
-				<div class="contactaddress">
-					 1044 Madison Avenue, New York, NY 10075, US<br/>
-					<a class="map" href="#">Map</a>
-				</div>
-			</div>
-		</div>
-	
-</div>
+  <!-- Services -->
+  <section class="content-section" id="services">
+    <div class="container">
+      <div class="content-section-heading text-center">
+        <h2 class="text-secondary mb-5 mt-0">Services</h2>
+      </div>
+      <div class="row no-gutters">
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">Salon</div>
+                <p class="mb-0">Let us make your hair smooth, silky, radiant and supple!</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/bg3.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">Spa</div>
+                <p class="mb-0">Massages, Oils, Music, Candles and Aroma!</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/bg8.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">Skin care</div>
+                <p class="mb-0">Make your skin vibrant, gleaming and rubicund!</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/bg11.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-6">
+          <a class="portfolio-item" href="#!">
+            <div class="caption">
+              <div class="caption-content">
+                <div class="h2">Bridal</div>
+                <p class="mb-0">Give yourself the most desirable bridal makeover to look perfect on your wedding day!</p>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/bg12.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Contact -->
+  <div id="contact" class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15070.304097726346!2d72.8631328!3d19.2137118!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x189989d18f1804b9!2sCatwalk%2021%20Salon%20%26%20Spa!5e0!3m2!1sen!2sin!4v1609566864934!5m2!1sen!2sin"></iframe>
+  </div>
+  <div class="container">
+    <div class="content-section-heading text-center">
+      <h2 class="mb-5 mt-5">Contact Information</h2>
+    </div>
+    <div class="row">
+      <div class="col text-center">
+        <p class="mb-0 display-4" style="font-size: xx-large;">Shop 37, Vasant Smruti CHS Ltd.,</p>
+        <p class="mb-0 display-4" style="font-size: xx-large;">Near Surbhi Hotel, 90ft Road,</p>
+        <p class="mb-0 display-4" style="font-size: xx-large;">Thakur Complex, Kandivali(E),</p>
+        <p class="display-4" style="font-size: xx-large;">Mumbai - 400 101</p>
+        <p class="mb-0 display-4" style="font-size: xx-large;"><i class="fas fa-phone"></i><span style='color:white;margin-right:0.3em; display:inline-block;'>&nbsp;</span> 022 4971 2225</p>
+      </div>
+    </div>
+  </div>
 
-	</section>
-</div>
+  <!-- Footer -->
+  <footer class="footer text-center">
+    <div class="container">
+      <ul class="list-inline mb-5">
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="#!">
+            <i class="icon-social-facebook"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="#!">
+            <i class="icon-social-twitter"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white" href="#!">
+            <i class="icon-social-instagram"></i>
+          </a>
+        </li>
+      </ul>
+      <p class="text-muted small mb-0">Copyright &copy; Catwalk21 2021</p>
+    </div>
+  </footer>
 
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
 
-<!-- Scripts -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="js/common.js"></script>
-<script src="js/home.js"></script>
-<script src="js/testimonials.js"></script>
-<script src="js/anime.min.js"></script>
-<script src="js/animation.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/stylish-portfolio.js"></script>
+  <script src="js/common.js"></script>
+  <script src="js/anime.min.js"></script>
+  <script src="js/animation.js"></script>
 
 </body>
+
 </html>
