Update Contact info

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
         <p class="mb-0 display-4" style="font-size: xx-large;">Near Surbhi Hotel, 90ft Road,</p>
         <p class="mb-0 display-4" style="font-size: xx-large;">Thakur Complex, Kandivali(E),</p>
         <p class="display-4" style="font-size: xx-large;">Mumbai - 400 101</p>
-        <p class="mb-0 display-4" style="font-size: xx-large;"><i class="fas fa-phone"></i><span style='color:white;margin-right:0.3em; display:inline-block;'>&nbsp;</span> 022 4971 2225</p>
+        <p class="mb-0 display-4" style="font-size: xx-large;"><i class="fas fa-phone"></i><span style='color:white;margin-right:0.3em; display:inline-block;'>&nbsp;</span> 022 4971 2225/8452032889</p>
+        <p class="mb-0 display-4" style="font-size: xx-large;"><i class="fa fa-envelope"></i><span style='color:white;margin-right:0.3em; display:inline-block;'>&nbsp;</span>catwalk21salon@gmail.com</p>
       </div>
     </div>
   </div>
