Layout improvements and bug fixes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.css" rel="stylesheet">
   <link href="css/loader.css" rel="stylesheet">
-  <link href="css/temp.css" rel="stylesheet">
 
 </head>
 
@@ -43,25 +42,25 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger btn btn-primary" href="#page-top">
+        <a class="js-scroll-trigger btn btn-outline-dark" href="#page-top">
           <i class="fa fa-home" aria-hidden="true"></i>
           Home
         </a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger btn btn-primary" href="#about">
+        <a class="js-scroll-trigger btn btn-outline-dark" href="#about">
           <i class="fa fa-info-circle" aria-hidden="true"></i>
           About
         </a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger btn btn-primary" href="#services">
+        <a class="js-scroll-trigger btn btn-outline-dark" href="#services">
           <i class="fa fa-book" aria-hidden="true"></i>
           Services
         </a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger btn btn-primary" href="#contact">
+        <a class="js-scroll-trigger btn btn-outline-dark" href="#contact">
           <i class="fa fa-phone" aria-hidden="true"></i>
           Contact
         </a>
@@ -73,15 +72,10 @@
   <header class="masthead d-flex">
     <canvas  class="fireworks"></canvas>
     <div class="container text-center my-auto" style="z-index: 1;">
-      <hr />
       <picture>
-        <img src="img/full_logo_white.png" class="img-fluid" width="50%" alt="Catwalk21 main Logo">
+        <img src="img/full_logo.png" class="img-fluid" width="50%" alt="Catwalk21 main Logo">
       </picture>
-      <h2 class="mb-5" style="font-family: main_font; color: white;">
-        <em>- SALON & SPA -</em>
-      </h2>
-      <hr />
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <p class="h3" style="font-family: main_font;">SALON & SPA</p>
     </div>
     <div class="overlay"></div>
   </header>
@@ -167,12 +161,12 @@
     </div>
     <div class="row">
       <div class="col text-center">
-        <p class="mb-0 display-4" style="font-size: xx-large;">Shop 37, Vasant Smruti CHS Ltd.,</p>
-        <p class="mb-0 display-4" style="font-size: xx-large;">Near Surbhi Hotel, 90ft Road,</p>
-        <p class="mb-0 display-4" style="font-size: xx-large;">Thakur Complex, Kandivali(E),</p>
-        <p class="display-4" style="font-size: xx-large;">Mumbai - 400 101</p>
-        <p class="mb-0 display-4" style="font-size: xx-large;"><i class="fas fa-phone"></i><span style='color:white;margin-right:0.3em; display:inline-block;'>&nbsp;</span> 022 4971 2225/8452032889</p>
-        <p class="mb-0 display-4" style="font-size: xx-large;"><i class="fa fa-envelope"></i><span style='color:white;margin-right:0.3em; display:inline-block;'>&nbsp;</span>catwalk21salon@gmail.com</p>
+        <p class="mb-0 h3">Shop 37, Vasant Smruti CHS Ltd.,</p>
+        <p class="mb-0 h3">Near Surbhi Hotel, 90ft Road,</p>
+        <p class="mb-0 h3">Thakur Complex, Kandivali(E),</p>
+        <p class="h3">Mumbai - 400 101</p>
+        <p class="mb-0 h5"><i class="fas fa-phone"></i> 022 4971 2225/8452032889</p>
+        <p class="mb-0 h5"><i class="fa fa-envelope"></i> customercare@catwalk21salon.com</p>
       </div>
     </div>
   </div>
