Update phone number for new branch

--- a/index.html
+++ b/index.html
@@ -291,23 +291,29 @@
           <p class="mb-0 h3">Near Surbhi Hotel, 90ft Road,</p>
           <p class="mb-0 h3">Thakur Complex, Kandivali(E),</p>
           <p class="h3">Mumbai - 400 101</p>
+          <div class="content-section-heading text-center mt-2">
+            <p class="mb-0 h5">
+              <i class="fas fa-phone"></i> 022 4971 2225/8452032889
+            </p>
+            <p class="mb-0 h5">
+              <i class="fa fa-envelope"></i> customercare@catwalk21salon.com
+            </p>
+          </div>
         </div>
         <div class="col text-center">
           <p class="mb-0 h3">Shop 58, Evershine Moon CHS 72,</p>
-          <p class="mb-0 h3">
-            behind Evershine Crown, Evershine Millennium Paradise,
-          </p>
+          <p class="mb-0 h3">behind Evershine Crown,</p>
           <p class="mb-0 h3">Thakur Village, Kandivali East,</p>
           <p class="h3">Mumbai - 400 101</p>
+          <div class="content-section-heading text-center mt-2">
+            <p class="mb-0 h5">
+              <i class="fas fa-phone"></i> 022 4751 4237/9004960045
+            </p>
+            <p class="mb-0 h5">
+              <i class="fa fa-envelope"></i> customercare@catwalk21salon.com
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="content-section-heading text-center mt-5">
-        <p class="mb-0 h5">
-          <i class="fas fa-phone"></i> 022 4971 2225/8452032889
-        </p>
-        <p class="mb-0 h5">
-          <i class="fa fa-envelope"></i> customercare@catwalk21salon.com
-        </p>
       </div>
     </div>
 
